--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "author": "hk8522@outlook.com",
   "license": "ISC",
   "dependencies": {
+    "@vue/cli": "^5.0.4",
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
